# bs

./: .gitignore  COPYING  LICENSE  Makefile.am  Makefile.common  README.md  configure.ac
etc/m4/: ac_config_cxx_warnings.m4  ac_config_with_package.m4  ac_config_with_range_v3.m4  ac_enable_openmp.m4  ac_pkg_config_with.m4  opencv.m4
examples/: Makefile.am  adaptive_learning.cpp  adaptive_median.cpp  adaptive_selective_learning.cpp  bs.cpp  fgmm.cpp  fgmm_um.cpp  frame_range.hpp  fuzzy_choquet.cpp  fuzzy_sugeno.cpp  grimson_gmm.cpp  line_range.hpp  moving_mean.cpp  null.cpp  options.cpp  options.hpp  run.hpp  sigma_delta.cpp  simple_frame.cpp  simple_gaussian.cpp  static_frame.cpp  temporal_median.cpp  windowed_mean.cpp  windowed_variance.cpp  zivkovic_gmm.cpp
include/: Makefile.am
include/bs/: adaptive_background.hpp  adaptive_learning.hpp  adaptive_median.hpp  adaptive_selective_background.hpp  adaptive_selective_learning.hpp  config.hpp  defs.hpp  ewma.hpp  fgmm.cc  fgmm.hpp  fgmm_um.hpp  frame_range.hpp  fuzzy_choquet.hpp  fuzzy_sugeno.hpp  grimson_gmm.hpp  lbp.hpp  moving_mean.hpp  moving_variance.hpp  null.hpp  previous_frame.hpp  sigma_delta.hpp  simple_frame.hpp  simple_gaussian.hpp  static_frame.hpp  temporal_median.hpp  utils.hpp  windowed_mean.hpp  windowed_moving_mean.hpp  windowed_variance.hpp  zivkovic_gmm.hpp
include/bs/detail/: base.hpp  lbp.hpp  threshold.hpp
src/: Makefile.am  adaptive_background.cpp  adaptive_learning.cpp  adaptive_median.cpp  adaptive_selective_background.cpp  adaptive_selective_learning.cpp  fgmm_um.cpp  fuzzy_choquet.cpp  fuzzy_integral.hpp  fuzzy_sugeno.cpp  grimson_gmm.cpp  lbp.cpp  moving_mean.cpp  moving_variance.cpp  previous_frame.cpp  sigma_delta.cpp  simple_frame.cpp  simple_gaussian.cpp  static_frame.cpp  temporal_median.cpp  utils.cpp  windowed_mean.cpp  windowed_moving_mean.cpp  windowed_variance.cpp  zivkovic_gmm.cpp
tests/: Makefile.am  lbp_perf.cpp  threshold.cpp
