## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
  bs/adaptive_learning.hpp                      \
  bs/adaptive_median.hpp                        \
  bs/adaptive_selective_learning.hpp            \
  bs/frame_range.hpp                            \
  bs/lbp.hpp                                    \
  bs/moving_mean.hpp                            \
  bs/null.hpp                                   \
  bs/sigma_delta.hpp                            \
  bs/simple_frame.hpp                           \
  bs/static_frame.hpp                           \
  bs/temporal_median.hpp                        \
  bs/utils.hpp                                  \
  bs/windowed_mean.hpp                          \
  bs/windowed_variance.hpp
