## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
  bs/_config.hpp                                \
  bs/config.hpp                                 \
  bs/defs.hpp                                   \
  bs/detail/lbp.hpp                             \
  bs/detail/threshold.hpp                       \
  bs/adaptive_median.hpp                        \
  bs/frame_range.hpp                            \
  bs/fuzzy_sugeno.hpp                           \
  bs/sigma_delta.hpp                            \
  bs/temporal_median.hpp                        \
  bs/utils.hpp
