## -*- mode: makefile -*-

nobase_include_HEADERS =                        \
  bs/_config.hpp                                \
  bs/config.hpp                                 \
  bs/defs.hpp                                   \
  bs/detail/lbp.hpp                             \
  bs/detail/threshold.hpp                       \
  bs/adaptive_median.hpp                        \
  bs/ewma.hpp                                   \
  bs/fgmm_um.hpp                                \
  bs/frame_range.hpp                            \
  bs/fuzzy_choquet.hpp                          \
  bs/fuzzy_sugeno.hpp                           \
  bs/grimson_gmm.hpp                            \
  bs/sigma_delta.hpp                            \
  bs/simple_gaussian.hpp                        \
  bs/temporal_median.hpp                        \
  bs/zivkovic_gmm.hpp                           \
  bs/utils.hpp
