## -*- mode: makefile -*-

EXTRA_DIST = 

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libbs.la

libbs_la_SOURCES =                              \
  adaptive_learning.cpp                         \
  adaptive_median.cpp                           \
  adaptive_selective_learning.cpp               \
  fuzzy_sugeno.cpp                              \
  lbp.cpp                                       \
  moving_mean.cpp                               \
  sigma_delta.cpp                               \
  simple_frame.cpp                              \
  static_frame.cpp                              \
  temporal_median.cpp                           \
  utils.cpp                                     \
  windowed_mean.cpp                             \
  windowed_variance.cpp
