## -*- mode: makefile -*-

EXTRA_DIST = 

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libbs.la

libbs_la_SOURCES =                              \
  adaptive_median.cpp                           \
  fuzzy_sugeno.cpp                              \
  lbp.cpp                                       \
  sigma_delta.cpp                               \
  temporal_median.cpp
