## -*- mode: makefile -*-

EXTRA_DIST = fuzzy_integral.hpp

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libbs.la

libbs_la_SOURCES =                              \
  adaptive_median.cpp                           \
  fuzzy_choquet.cpp                             \
  fuzzy_sugeno.cpp                              \
  grimson_gmm.cpp                               \
  lbp.cpp                                       \
  sigma_delta.cpp                               \
  simple_gaussian.cpp                           \
  temporal_median.cpp
